[package]
name = "libman"
version = "0.1.0"
authors = ["Richard Underhill <richard.underhill@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["winuser", "winnt", "winreg", "winerror"] }